--- a/frontend/static/css/users.css
+++ b/frontend/static/css/users.css
@@ -1,29 +1,113 @@
+/* 전체 화면을 꽉 채우도록 설정 */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  --nav-width: 200px;
-  margin: 0 0 0 var(--nav-width);
-  font-family: "Quicksand", sans-serif;
-  font-size: 18px;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  min-height: 100%;
+  background-color: #f0f4f7;
 }
 
-.nav {
-  position: fixed;
+/* 헤더 */
+header {
+  position: absolute;
   top: 0;
+  width: 100%;
+  height: 80px;
+  background-color: #ffffff;
+  align-items: center;
+  box-sizing: border-box;
+  border: 0.5px solid #d6d6d6;
+}
+
+.logo {
+  margin-top: 25px;
+  margin-left: 30px;
+  max-width: 40%;
+  max-height: 40%;
+}
+
+/* 전체 사이드바 */
+nav {
+  position: absolute;
+  top: 80px;
   left: 0;
-  width: var(--nav-width);
-  height: 100vh;
-  background: #222222;
+  width: 250px;
+  height: calc(100%);
+  /* height: 100vh; */
+  background-color: #3c4b64;
 }
 
-.nav__link {
-  display: block;
-  padding: 12px 18px;
+/* 첫번째 사이드바 */
+#first-sidebar {
+  position: absolute;
+  top: 0px;
+  width: 250px;
+  height: 100px;
+  background-color: #303c54;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+/* 두번째 사이드바 */
+#second-sidebar {
+  position: absolute;
+  top: 130px;
+  width: 250px;
+  height: 54px;
+  background-color: #3c4b64;
+  /* background-color: #798291; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 16px;
+  box-sizing: border-box;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.fa-solid {
+  margin-right: 10px;
+}
+
+#second-sidebar:hover {
+  background-color: #798291;
+}
+
+/* 세번째 사이드바 */
+#third-sidebar {
+  position: absolute;
+  top: 184px;
+  width: 250px;
+  height: 54px;
+  background-color: #3c4b64;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+#third-sidebar:hover {
+  background-color: #798291;
+}
+
+a:link,
+a:visited,
+a:active {
+  color: white;
   text-decoration: none;
-  color: #eeeeee;
-  font-weight: 500;
-}
-
-.nav__link:hover {
-  background: rgba(255, 255, 255, 0.05);
 }
 
 #app {
@@ -34,4 +118,33 @@ body {
 
 a {
   color: #009579;
+}
+
+footer {
+  bottom: 0;
+  width: 100%;
+  height: 80px;
+  background-color: #efefef;
+  box-sizing: border-box;
+  border: 1px solid #d6d6d6;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+}
+
+/* 경로 표시 */
+#first-breadcrumb {
+  font-size: 32px;
+  font-weight: bold;
+  margin-right: 15px;
+}
+
+#second-breadcrumb {
+  font-size: 14px;
+  color: gray;
+}
+
+#first-breadcrumb,
+#second-breadcrumb {
+  display: inline;
 }
